objects/vlocity_ins__TrailingDocumentPlaceholder__c.object
<CustomObject>
    <description>Tracks the documents that are needed to make decisions about insurance related processes. For example, an application for life insurance may require one or more medical tests whose results must be submitted before underwriting can proceed. Or underwriting of property insurance may require a property survey, geological survey, soil inspection, or site inspection. Trailing document placeholders can be tracked for quotes, applications, policies, claims or case.</description>
    <fields>
        <fullName>UniqueField__c</fullName>
        <formula>IF(vlocity_ins__QuoteId__c != null, CASESAFEID(vlocity_ins__QuoteId__c) + &apos;_&apos;+ Name, 
IF(vlocity_ins__ClaimId__c != null, CASESAFEID(vlocity_ins__ClaimId__c)+&apos;_&apos;+Name, Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>vlocity_ins__Application__c</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>TrailingDocumentPlaceholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>TrailingDocumentPlaceholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>TrailingDocumentPlaceholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Line Item</label>
        <referenceTo>vlocity_ins__ClaimLineItem__c</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>TrailingDocumentPlaceholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>TrailingDocumentPlaceholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if this document requirement is required.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentPlaceholderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trailing Document Category</label>
        <referenceTo>vlocity_ins__TrailingDocumentPlaceholder__c</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>TrailingDocumentPlaceholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Trailing Document Placeholders</relationshipLabel>
        <relationshipName>TrailingDocumentPlaceholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                    <isActive>false</isActive>
                    <label>Optional</label>
                </value>
                <value>
                    <fullName>Required</fullName>
                    <isActive>false</isActive>
                    <label>Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trailing Document Placeholder</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trailing Document Placeholder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailing Document Placeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>